--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+form[name=searchForm] {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 #loading-animation:after {
   overflow: hidden;
   display: inline-block;
